# ShashChess

./: .gitignore  AUTHORS  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LinuxBuild.txt  NNToTest.ods  NewWorkToDo.xlsx  NewWorkToDo2022.xlsx  Patches.xlsx  README.md  SetupVSCode.odt  ToTune.xlsx  Top CPU Contributors.txt  WindowsBuild.docx  WorkTODO.ods  appveyor.yml  buildProblems  curl.7z  desktop.ini  differenze.txt  index.html  othersInf.txt
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  config.yml
.github/ci/: matrix.json
.github/workflows/: alexander.yml  alexander_arm_binaries.yml  alexander_binaries.yml  alexander_compile_test.yml  alexander_format_check.yml  alexander_sanitizers.yml  alexander_test.yml  arm_compilation.yml  avx2_compilers.yml  compilation.yml  games.yml  iwyu.yml  matetrack.yml  sanitizers.yml  shashchess.yml  stockfish_format_check.yml  tests.yml  upload_binaries.yml
Statistiche/: Statistiche.xlsx
Tests/: Table.ods
Tests/5/: Table.odc
doc/: AlexanderPresentation.docx  MASTERING THE GAME OF CHESS THROUGH A RE.docx  PresentazioneAlexander.docx  Release4.1.odt  ShashChess39WhatsNew.docx  Versione4.1.odt
doc/38/: NovitaShashChess38.docx  NovitaShashChess38.odt  WhatsNewShashChess38.docx
doc/39/: ShashChess39Novità.docx  ShashChess39WhatsNew.docx
doc/41/: Shashchess41WhatsNew.docx  TheySayAboutShashChess41.docx
examples/: Avatar.avt  PlayerCard.xlsx
scripts/: get_native_properties.sh
src/: CMakeLists.txt  MakeFileVSCode  Makefile  MakefileAndroid  MakefileNative  benchmark.cpp  benchmark.h  benchmark.ps1  benchmark_log.txt  bitbase.cpp  bitboard.cpp  bitboard.h  build.bat  clean.bat  difference.txt  differenceUnix-Windows.txt  endgame.cpp  endgame.h  engine.cpp  engine.h  evaluate.cpp  evaluate.h  gitdiff.txt  history.h  launcherBenchmark.bat  learn.cpp  learn.h  main.cpp  makeAVX2.bat  makeAVX512.bat  makeAll.bat  makeAll.sh  makeAll32.bat  makeAll64.bat  makeBMI2.bat  makeBMI2GD.bat  makeFormat.bat  makeModern.bat  makePopCnt.bat  material.cpp  (+44 more)
src/All/: .autotools  Makefile  benchmark.cpp  bitbase.cpp  bitboard.cpp  bitboard.h  endgame.cpp  endgame.h  evaluate.cpp  evaluate.h  learn.cpp  learn.h  main.cpp  makeAVX2.bat  makeAll.bat  makeAll.sh  makeAll32.bat  makeAll64.bat  makeAllNNUELEARN.sh  makeAllNNUELEARN32.bat  makeAllNNUELEARN64.bat  makeAllProfileBuild.bat  makeAllProfileBuild.sh  makeAllProfileNNUE-GEN.bat  makeAllProfileNNUE-GEN.sh  makeAllProfileNNUE.bat  makeAllProfileNNUE.sh  makeBMI2.bat  makeBMI2ProfileNNUE.bat  makeModern.bat  material.cpp  material.h  misc.cpp  misc.h  montecarlo.cpp  montecarlo.h  movegen.cpp  movegen.h  movepick.cpp  movepick.h  (+22 more)
src/All/book/: book.cpp  book.h
src/All/book/ctg/: ctg.cpp  ctg.h
src/All/book/polyglot/: polyglot.cpp  polyglot.h
src/All/eval/nnue/: nnue_architecture.h
src/All/eval/nnue/architectures/: halfkp-cr-ep_256x2-32-32.h  halfkp_256x2-32-32.h  halfkp_384x2-32-32.h  k-p-cr-ep_256x2-32-32.h  k-p-cr_256x2-32-32.h  k-p_256x2-32-32.h
src/All/eval/nnue/layers/: affine_transform.h
src/All/learn/: learner.cpp  multi_think.h
src/All/mcts/: montecarlo.cpp  montecarlo.h
src/All/nnue/: evaluate_nnue.cpp
src/All/syzygy/: tbprobe.cpp  tbprobe.h
src/Unix/: benchmark.cpp  bitbase.cpp  endgame.cpp  evaluate.cpp  makeAll.sh  material.cpp  misc.cpp  misc.h  movegen.h  movepick.cpp  movepick.h  pawns.cpp  pawns.h  position.cpp  position.h  psqt.cpp  search.cpp  thread.cpp  thread.h  thread_win32.h  timeman.cpp  tt.cpp  tt.h  types.h  uci.cpp  uci.h  ucioption.cpp
src/Unix/syzygy/: tbprobe.h
src/Windows/: Makefile  bitboard.cpp  bitboard.h  evaluate.cpp  evaluate.h  main.cpp  makeAll.bat  misc.cpp  movegen.cpp  pawns.cpp  pawns.h  polybook.cpp  position.cpp  psqt.cpp  search.cpp  search.h  thread.cpp  thread.h  timeman.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h  ucioption.cpp
src/Windows/syzygy/: tbprobe.cpp
src/book/: book.cpp  book.h  book_manager.cpp  book_manager.h  file_mapping.cpp  file_mapping.h
src/book/ctg/: ctg.cpp  ctg.h
src/book/polyglot/: polyglot.cpp  polyglot.h
src/handicap/: evaluate_handicap.cpp  evaluate_handicap.h
src/learn/: learn.cpp  learn.h
src/livebook/: BaseLivebook.cpp  BaseLivebook.h  ChessDBContributor.cpp  ChessDBContributor.h  ChessDb.cpp  ChessDb.h  LichessEndgame.cpp  LichessEndgame.h  LichessGames.cpp  LichessGames.h  LichessLivebook.cpp  LichessLivebook.h  LichessMaster.cpp  LichessMaster.h  LichessOpening.cpp  LichessOpening.h  LichessPlayer.cpp  LichessPlayer.h  LichessUsers.cpp  LichessUsers.h  Proxy.cpp  Proxy.h
src/livebook/analysis/: Analysis.cpp  Analysis.h  Cp.cpp  Cp.h  Mate.cpp  Mate.h  Wdl.cpp  Wdl.h
src/livebook/json/: json.hpp
src/mcts/: montecarlo.cpp  montecarlo.h
src/nnue/: evaluate_nnue.cpp  evaluate_nnue.h  network.cpp  network.h  nnue_accumulator.cpp  nnue_accumulator.h  nnue_architecture.h  nnue_common.h  nnue_feature_transformer.h  nnue_misc.cpp  nnue_misc.h  simd.h
src/nnue/features/: full_threats.cpp  full_threats.h  half_ka_v2_hm.cpp  half_ka_v2_hm.h
src/nnue/layers/: affine_transform.h  affine_transform_sparse_input.h  clipped_relu.h  simd.h  sqr_clipped_relu.h
src/shashin/: moveconfig.cpp  moveconfig.h  shashin_helper.h  shashin_manager.cpp  shashin_manager.h  shashin_params.h  shashin_position.h  shashin_types.h
src/syzygy/: tbprobe.cpp  tbprobe.h
src/wdl/: win_probability.cpp  win_probability.h
tests/: instrumented.py  instrumented.sh  perft.sh  testing.py
tests/HandicapMode/: handicapMode.xlsx
tests/HardPositions/: 011622TestSuite.xlsx  02062021TestSuite.xlsx  042822.ods  070322TestSuite.ods  072422.ods  09052021TestSuite.ods  102521TestSuite.xlsx  110121TestSuite.xlsx  111021.xlsx  111721.xlsx  128a.epd  2048.epd  256-072325.xlsx  256-2023.epd  258HardPositions.csv  384.epd  HardPositions2022.epd  HardPositions2022.xlsx  HardPositions2022ShashChess26.2.xlsx  HardPositions2022ShashChess26.xlsx  HardPositions2022ShashChess27.xlsx  HardPositions2022ShashChess28.xlsx  (+27 more)
webpages/: AnalisiInfografica.html  InfographicEn.html  dashboard_ShashChess41.html  shashchess.html  test.html
(+220 files in other folders)
